# WiringPi

./: CMakeLists.txt  wiringPi.cmake
wiringPi/: CMakeLists.txt  Makefile  wiringPi.c
